Pruebas con limpiar coordenadas para df_flood

--- a/Notebooks/01LimpiarDatos/01_Ale_Flood_impacto.ipynb
+++ b/Notebooks/01LimpiarDatos/01_Ale_Flood_impacto.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
        "[10 rows x 26 columns]"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
        "(16636, 26)"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
        "[2 rows x 26 columns]"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
        "(5808, 26)"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +662,7 @@
        "dtype('O')"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,34 +697,127 @@
     "df['Latitude'] = df['Latitude'].astype(str)\n",
     "df['Longitude'] = df['Longitude'].astype(str)\n",
     "\n",
-    "# Limpiar las coordenadas latitude y longitude\n",
-    "df['Latitude'] = df['Latitude'].apply(lambda x: re.sub('[^\\d.-]', '', x.split('.', 1)[0]) if isinstance(x, str) else x)\n",
-    "df['Longitude'] = df['Longitude'].apply(lambda x: re.sub('[^\\d.-]', '', x.split('.', 1)[0]) if isinstance(x, str) else x)\n",
+    "# Limpiar las coordinadas de latitude y longitude\n",
+    "df['Latitude'] = df['Latitude'].apply(lambda x: re.sub('[^\\d.-]', '', x))\n",
+    "df['Longitude'] = df['Longitude'].apply(lambda x: re.sub('[^\\d.-]', '', x))\n",
     "\n",
-    "# Eliminar puntos finales\n",
+    "# Quitar puntos finales\n",
     "df['Latitude'] = df['Latitude'].str.rstrip('.')\n",
     "df['Longitude'] = df['Longitude'].str.rstrip('.')\n",
     "\n",
-    "# Cambiar strings vacíos a NaN\n",
-    "df['Latitude'] = df['Latitude'].replace('', np.nan)\n",
-    "df['Longitude'] = df['Longitude'].replace('', np.nan)\n",
+    "# # Reemplazar Norte y Este con valores positivos, Sur y Oeste con negativos\n",
+    "# df['Latitude'] = df['Latitude'].apply(lambda x: float(x) if x and x[-1] != 'S' else -float(x[:-1]) if x else np.nan)\n",
+    "# df['Longitude'] = df['Longitude'].apply(lambda x: float(x) if x and x[-1] != 'W' else -float(x[:-1]) if x else np.nan)\n",
     "\n",
-    "# Convertir coordenadas válidas a float\n",
-    "df['Latitude'] = df['Latitude'].astype(float)\n",
-    "df['Longitude'] = df['Longitude'].astype(float)\n",
+    "# Función para convertir latitude y longitude\n",
+    "def convert_coordinates(x):\n",
+    "    if not x:\n",
+    "        return np.nan\n",
+    "    \n",
+    "    # Remover puntos extras en decimales\n",
+    "    x = re.sub('\\.(?=.*\\.)', '', x)\n",
+    "    \n",
+    "    try:\n",
+    "        value = float(x)\n",
+    "        if x[-1] == 'S' or x[-1] == 'W':\n",
+    "            return -value\n",
+    "        else:\n",
+    "            return value\n",
+    "    except ValueError:\n",
+    "        return np.nan\n",
     "\n",
-    "# Identificar valores anómalos a partir de los grados\n",
-    "anomalous_lat = df['Latitude'].abs() > 90\n",
-    "anomalous_lon = df['Longitude'].abs() > 180\n",
+    "# Convertir Latitude y Longitude a coordenadas\n",
+    "df['Latitude'] = df['Latitude'].apply(convert_coordinates)\n",
+    "df['Longitude'] = df['Longitude'].apply(convert_coordinates)\n",
+    "\n",
+    "# Redondear decimals a 2 dígitos\n",
+    "df['Latitude'] = df['Latitude'].round(2)\n",
+    "df['Longitude'] = df['Longitude'].round(2)\n",
+    "\n",
+    "# Identificar valores anómalos a partir de los grados,\n",
+    "# que no representen coordenadas: los que no estén dentro de 90 y -90 ni 180 y -180\n",
+    "anomalous_lat = ~df['Latitude'].between(-90, 90)\n",
+    "anomalous_lon = ~df['Longitude'].between(-180, 180)\n",
     "\n",
     "# Configurar valores anómalos a NaN\n",
-    "df.loc[anomalous_lat, 'Latitude'] = np.nan\n",
-    "df.loc[anomalous_lon, 'Longitude'] = np.nan"
+    "# df.loc[anomalous_lat, 'Latitude'] = np.nan\n",
+    "# df.loc[anomalous_lon, 'Longitude'] = np.nan\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Crear listas vacías para almacenar valores anómalos de latitude y longitude\n",
+    "# anomalous_lat = []\n",
+    "# anomalous_lon = []\n",
+    "\n",
+    "# # Iterar sobre las filas e identificar valores anómalos\n",
+    "# for index, row in df_flood.iterrows():\n",
+    "#     latitude = row['Latitude']\n",
+    "#     longitude = row['Longitude']\n",
+    "    \n",
+    "#     # Revisar si latitude y longitude son números válidos\n",
+    "#     if pd.notnull(latitude) and pd.notnull(longitude):\n",
+    "#         # Convertir latitude y longitude a tipo numérico si hay strings\n",
+    "#         if isinstance(latitude, str):\n",
+    "#             latitude = pd.to_numeric(latitude, errors='coerce')\n",
+    "#         if isinstance(longitude, str):\n",
+    "#             longitude = pd.to_numeric(longitude, errors='coerce')\n",
+    "        \n",
+    "#         # Revisar si latitude está fuera de rango (-90 to 90)\n",
+    "#         if latitude < -90 or latitude > 90:\n",
+    "#             anomalous_lat.append(latitude)\n",
+    "        \n",
+    "#         # Revisar si longitude está fuera de rango (-180 a 180)\n",
+    "#         if longitude < -180 or longitude > 180:\n",
+    "#             anomalous_lon.append(longitude)\n",
+    "\n",
+    "# # Mostrar valores anómalos de latitude y longitude\n",
+    "# print(\"Valores Anómalos de Latitude:\", anomalous_lat)\n",
+    "# print(\"Valores Anómalos de Longitude:\", anomalous_lon)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Convertir 'Latitude' y 'Longitude' a string\n",
+    "# df['Latitude'] = df['Latitude'].astype(str)\n",
+    "# df['Longitude'] = df['Longitude'].astype(str)\n",
+    "\n",
+    "# # Limpiar las coordenadas latitude y longitude\n",
+    "# df['Latitude'] = df['Latitude'].apply(lambda x: re.sub('[^\\d.-]', '', x.split('.', 1)[0]) if isinstance(x, str) else x)\n",
+    "# df['Longitude'] = df['Longitude'].apply(lambda x: re.sub('[^\\d.-]', '', x.split('.', 1)[0]) if isinstance(x, str) else x)\n",
+    "\n",
+    "# # Eliminar puntos finales\n",
+    "# df['Latitude'] = df['Latitude'].str.rstrip('.')\n",
+    "# df['Longitude'] = df['Longitude'].str.rstrip('.')\n",
+    "\n",
+    "# # Cambiar strings vacíos a NaN\n",
+    "# df['Latitude'] = df['Latitude'].replace('', np.nan)\n",
+    "# df['Longitude'] = df['Longitude'].replace('', np.nan)\n",
+    "\n",
+    "# # Convertir coordenadas válidas a float\n",
+    "# df['Latitude'] = df['Latitude'].astype(float)\n",
+    "# df['Longitude'] = df['Longitude'].astype(float)\n",
+    "\n",
+    "# # Identificar valores anómalos a partir de los grados\n",
+    "# anomalous_lat = df['Latitude'].abs() > 90\n",
+    "# anomalous_lon = df['Longitude'].abs() > 180\n",
+    "\n",
+    "# # Configurar valores anómalos a NaN\n",
+    "# df.loc[anomalous_lat, 'Latitude'] = np.nan\n",
+    "# df.loc[anomalous_lon, 'Longitude'] = np.nan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,13 +845,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import re\n",
-    "# import numpy as np\n",
-    "\n",
     "# # Filtrar el df_flood DataFrame para Disaster Subtype 'Flood' con non-null values en columnas específicas\n",
     "# df_flood = df[(df['Disaster Subtype'] == 'Flood') & (df['Total Affected'].notna()) & (df['Total Deaths'].notna()) & (df['Dis Mag Scale'].notna()) & (df['Dis Mag Value'].notna())]\n",
     "\n",
@@ -788,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -848,22 +938,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "nan\n",
-      "nan\n"
+      "-7.379\n",
+      "110.24\n"
      ]
     }
    ],
    "source": [
     "# Examinar filas específicas para verificar si el proceso de limpieza ha manejado los valores anómalos correctamente.\n",
-    "print(df_flood.loc[12, 'Latitude'])\n",
-    "print(df_flood.loc[12, 'Longitude'])"
+    "print(df_flood.loc[12000, 'Latitude'])\n",
+    "print(df_flood.loc[12000, 'Longitude'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Valores Anómalos de Latitud"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "114"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(anomalous_latitudes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Índices Anómalos de Latitud"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Índices Anómalos de Latitud: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113]\n"
+     ]
+    }
+   ],
+   "source": [
+    "anomalous_latitudes = [564.778, -865.047, 270.633, 350.754, 388.497, 151.821, 940.044, 193.801, -295.025, -405.208, 125.947, 289.081, 213.521, 334.553, 420.681, 194.433, 301.135, 342.696, 370.528, -104.897, 465.994, -528.256, 398.677, 236.387, -189.538, 369.291, -344.809, 304.563, 359.161, 229.043, 491.358, 532.732, -617.945, 448.013, 439.958, 431.605, 165.919, 822.392, -140.095, 205.946, 240.587, -183.097, 246.174, 163.191, 396.151, 166.076, 759.777, 420.408, 183.122, -248.006, -202.305, -156.178, 358.444, 150.103, 287.404, -203.461, 500.043, 443.289, 136.883, 216.964, 439.958, 303.632, 139.188, 382.138, 388.278, 375.597, -164.638, -414.041, -383.652, 440.617, -881.664, -223.617, 270.326, 101.743, 420.683, -255.689, -121.145, -351.086, -115.042, -697.805, -441.033, 394.741, 738.005, 414.571, 666.576, 730.951, 484.049, -252.205, 440.617, 417.575, 335.131, 331.767, 262.074, 378.142, 380.626, -655.868, 107.121, 218.734, 268.946, 336.304, 194.811, 148.417, -398.648, 350.129, 343.432, 155.509, 468.147, -215.153, 440.617, 719.301, 208.137, 341.936, -506.017, -326.329]\n",
+    "\n",
+    "anomalous_indices = []\n",
+    "for index, lat in enumerate(anomalous_latitudes):\n",
+    "    if lat < -90 or lat > 90:\n",
+    "        anomalous_indices.append(index)\n",
+    "\n",
+    "print(\"Índices Anómalos de Latitud:\", anomalous_indices)"
    ]
   },
   {
@@ -876,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +1042,7 @@
       "\u001b[1;31mKeyError\u001b[0m: 0",
       "\nThe above exception was the direct cause of the following exception:\n",
       "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[154], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m sns\u001b[39m.\u001b[39;49mboxplot(df_flood[\u001b[39m'\u001b[39;49m\u001b[39mLongitude\u001b[39;49m\u001b[39m'\u001b[39;49m])\n",
+      "Cell \u001b[1;32mIn[80], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m sns\u001b[39m.\u001b[39;49mboxplot(df_flood[\u001b[39m'\u001b[39;49m\u001b[39mLongitude\u001b[39;49m\u001b[39m'\u001b[39;49m])\n",
       "File \u001b[1;32mc:\\Users\\AleEng\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\seaborn\\categorical.py:2231\u001b[0m, in \u001b[0;36mboxplot\u001b[1;34m(data, x, y, hue, order, hue_order, orient, color, palette, saturation, width, dodge, fliersize, linewidth, whis, ax, **kwargs)\u001b[0m\n\u001b[0;32m   2224\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mboxplot\u001b[39m(\n\u001b[0;32m   2225\u001b[0m     data\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, \u001b[39m*\u001b[39m, x\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, y\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, hue\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, order\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, hue_order\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m,\n\u001b[0;32m   2226\u001b[0m     orient\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, color\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, palette\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, saturation\u001b[39m=\u001b[39m\u001b[39m.75\u001b[39m, width\u001b[39m=\u001b[39m\u001b[39m.8\u001b[39m,\n\u001b[0;32m   2227\u001b[0m     dodge\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, fliersize\u001b[39m=\u001b[39m\u001b[39m5\u001b[39m, linewidth\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, whis\u001b[39m=\u001b[39m\u001b[39m1.5\u001b[39m, ax\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m,\n\u001b[0;32m   2228\u001b[0m     \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs\n\u001b[0;32m   2229\u001b[0m ):\n\u001b[1;32m-> 2231\u001b[0m     plotter \u001b[39m=\u001b[39m _BoxPlotter(x, y, hue, data, order, hue_order,\n\u001b[0;32m   2232\u001b[0m                           orient, color, palette, saturation,\n\u001b[0;32m   2233\u001b[0m                           width, dodge, fliersize, linewidth)\n\u001b[0;32m   2235\u001b[0m     \u001b[39mif\u001b[39;00m ax \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m   2236\u001b[0m         ax \u001b[39m=\u001b[39m plt\u001b[39m.\u001b[39mgca()\n",
       "File \u001b[1;32mc:\\Users\\AleEng\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\seaborn\\categorical.py:785\u001b[0m, in \u001b[0;36m_BoxPlotter.__init__\u001b[1;34m(self, x, y, hue, data, order, hue_order, orient, color, palette, saturation, width, dodge, fliersize, linewidth)\u001b[0m\n\u001b[0;32m    781\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m, x, y, hue, data, order, hue_order,\n\u001b[0;32m    782\u001b[0m              orient, color, palette, saturation,\n\u001b[0;32m    783\u001b[0m              width, dodge, fliersize, linewidth):\n\u001b[1;32m--> 785\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mestablish_variables(x, y, hue, data, orient, order, hue_order)\n\u001b[0;32m    786\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mestablish_colors(color, palette, saturation)\n\u001b[0;32m    788\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdodge \u001b[39m=\u001b[39m dodge\n",
       "File \u001b[1;32mc:\\Users\\AleEng\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\seaborn\\categorical.py:486\u001b[0m, in \u001b[0;36m_CategoricalPlotter.establish_variables\u001b[1;34m(self, x, y, hue, data, orient, order, hue_order, units)\u001b[0m\n\u001b[0;32m    484\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mhasattr\u001b[39m(data, \u001b[39m\"\u001b[39m\u001b[39mshape\u001b[39m\u001b[39m\"\u001b[39m):\n\u001b[0;32m    485\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(data\u001b[39m.\u001b[39mshape) \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[1;32m--> 486\u001b[0m         \u001b[39mif\u001b[39;00m np\u001b[39m.\u001b[39misscalar(data[\u001b[39m0\u001b[39;49m]):\n\u001b[0;32m    487\u001b[0m             plot_data \u001b[39m=\u001b[39m [data]\n\u001b[0;32m    488\u001b[0m         \u001b[39melse\u001b[39;00m:\n",
@@ -928,9 +1076,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Longitude    13861\n",
+       "Latitude     13861\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df[['Longitude', 'Latitude']].isnull().sum()"
    ]
@@ -945,18 +1106,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7004082.0"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_flood['Total Deaths'].sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3968190458.0"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_flood['Total Affected'].sum()"
    ]
