--- a/Notebooks/01LimpiarDatos/01_Ale_NetworkGraph_prueba.ipynb
+++ b/Notebooks/01LimpiarDatos/01_Ale_NetworkGraph_prueba.ipynb
@@ -106,7 +106,7 @@
    ],
    "source": [
     "df.shape\n",
-    "# Resultado: 16636 filas y 20 columnas)"
+    "# Resultado: 16636 filas y 20 columnas"
    ]
   },
   {
