--- a/Notebooks/01LimpiarDatos/01_Ale_PivotTableSubtypesImpactCoordenadas.ipynb
+++ b/Notebooks/01LimpiarDatos/01_Ale_PivotTableSubtypesImpactCoordenadas.ipynb
@@ -102,7 +102,7 @@
     "# Pivotear el dataframe para separar subtypes como columns\n",
     "df_pivot = df_subset.pivot_table(index=['Start Day', 'Start Month', 'Start Year', 'End Day', 'End Month', 'End Year', 'Disaster Type', 'Total Deaths', 'Total Affected'], columns='Disaster Subtype', aggfunc='sum')\n",
     "\n",
-    "# Flatten the multi-level column index\n",
+    "# Aplanar el índice de columna multi-nivel\n",
     "df_pivot.columns = ['_'.join(col) for col in df_pivot.columns]\n",
     "\n",
     "# Resetear index\n",
