--- a/Notebooks/99 PRUEBAS a los CSV/03.02 Prueba DesNat 0711Lc quitar nulls.ipynb
+++ b/Notebooks/99 PRUEBAS a los CSV/03.02 Prueba DesNat 0711Lc quitar nulls.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,6 +466,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "42\n"
+     ]
+    }
+   ],
+   "source": [
+    "numero_int32 = 42\n",
+    "numero_int64 = int(numero_int32)\n",
+    "print(numero_int64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 16636 entries, 0 to 16635\n",
       "Data columns (total 26 columns):\n",
@@ -508,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
