Import folium borrado

--- a/Notebooks/01LimpiarDatos/01_Ale_EarthquakeLimpiarCoordenadas.ipynb
+++ b/Notebooks/01LimpiarDatos/01_Ale_EarthquakeLimpiarCoordenadas.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,18 +26,16 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import folium\n",
     "import re\n",
     "import geopy\n",
     "from geopy.geocoders import Nominatim\n",
     "from geopy.exc import GeocoderTimedOut\n",
-    "import folium\n",
     "from time import sleep"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +405,7 @@
        "[10 rows x 26 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +434,7 @@
        "(16636, 26)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +633,7 @@
        "[2 rows x 26 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +653,7 @@
        "(1597, 26)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +673,7 @@
        "dtype('O')"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -702,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -717,61 +715,61 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\AleEng\\AppData\\Local\\Temp\\ipykernel_20028\\4046226349.py:5: SettingWithCopyWarning: \n",
+      "C:\\Users\\AleEng\\AppData\\Local\\Temp\\ipykernel_8732\\4046226349.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_earthquake['Latitude'] = df_earthquake['Latitude'].astype(str)\n",
-      "C:\\Users\\AleEng\\AppData\\Local\\Temp\\ipykernel_20028\\4046226349.py:6: SettingWithCopyWarning: \n",
+      "C:\\Users\\AleEng\\AppData\\Local\\Temp\\ipykernel_8732\\4046226349.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_earthquake['Longitude'] = df_earthquake['Longitude'].astype(str)\n",
-      "C:\\Users\\AleEng\\AppData\\Local\\Temp\\ipykernel_20028\\4046226349.py:9: SettingWithCopyWarning: \n",
+      "C:\\Users\\AleEng\\AppData\\Local\\Temp\\ipykernel_8732\\4046226349.py:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_earthquake['Latitude'] = df_earthquake['Latitude'].apply(lambda x: re.sub('[^\\d.-]', '', x))\n",
-      "C:\\Users\\AleEng\\AppData\\Local\\Temp\\ipykernel_20028\\4046226349.py:10: SettingWithCopyWarning: \n",
+      "C:\\Users\\AleEng\\AppData\\Local\\Temp\\ipykernel_8732\\4046226349.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_earthquake['Longitude'] = df_earthquake['Longitude'].apply(lambda x: re.sub('[^\\d.-]', '', x))\n",
-      "C:\\Users\\AleEng\\AppData\\Local\\Temp\\ipykernel_20028\\4046226349.py:13: SettingWithCopyWarning: \n",
+      "C:\\Users\\AleEng\\AppData\\Local\\Temp\\ipykernel_8732\\4046226349.py:13: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_earthquake['Latitude'] = df_earthquake['Latitude'].str.rstrip('.')\n",
-      "C:\\Users\\AleEng\\AppData\\Local\\Temp\\ipykernel_20028\\4046226349.py:14: SettingWithCopyWarning: \n",
+      "C:\\Users\\AleEng\\AppData\\Local\\Temp\\ipykernel_8732\\4046226349.py:14: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_earthquake['Longitude'] = df_earthquake['Longitude'].str.rstrip('.')\n",
-      "C:\\Users\\AleEng\\AppData\\Local\\Temp\\ipykernel_20028\\4046226349.py:42: SettingWithCopyWarning: \n",
+      "C:\\Users\\AleEng\\AppData\\Local\\Temp\\ipykernel_8732\\4046226349.py:42: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_earthquake['Latitude'] = df_earthquake['Latitude'].apply(convert_coordinates)\n",
-      "C:\\Users\\AleEng\\AppData\\Local\\Temp\\ipykernel_20028\\4046226349.py:43: SettingWithCopyWarning: \n",
+      "C:\\Users\\AleEng\\AppData\\Local\\Temp\\ipykernel_8732\\4046226349.py:43: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_earthquake['Longitude'] = df_earthquake['Longitude'].apply(convert_coordinates)\n",
-      "C:\\Users\\AleEng\\AppData\\Local\\Temp\\ipykernel_20028\\4046226349.py:46: SettingWithCopyWarning: \n",
+      "C:\\Users\\AleEng\\AppData\\Local\\Temp\\ipykernel_8732\\4046226349.py:46: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_earthquake['Latitude'] = df_earthquake['Latitude'].round(2)\n",
-      "C:\\Users\\AleEng\\AppData\\Local\\Temp\\ipykernel_20028\\4046226349.py:47: SettingWithCopyWarning: \n",
+      "C:\\Users\\AleEng\\AppData\\Local\\Temp\\ipykernel_8732\\4046226349.py:47: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -914,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1057,7 +1055,7 @@
        "[100 rows x 4 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1100,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1141,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1160,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1171,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1182,7 +1180,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1201,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1210,7 +1208,7 @@
        "31"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1221,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1230,7 +1228,7 @@
        "31"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1248,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1270,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1300,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1309,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1326,7 +1324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1375,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1410,7 +1408,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1423,33 +1421,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Visualizaciones"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Heatmaps"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Pivot Tables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\AleEng\\AppData\\Local\\Temp\\ipykernel_20028\\2831770706.py:1: FutureWarning: pivot_table dropped a column because it failed to aggregate. This behavior is deprecated and will raise in a future version of pandas. Select only the columns that can be aggregated.\n",
+      "C:\\Users\\AleEng\\AppData\\Local\\Temp\\ipykernel_8732\\2831770706.py:1: FutureWarning: pivot_table dropped a column because it failed to aggregate. This behavior is deprecated and will raise in a future version of pandas. Select only the columns that can be aggregated.\n",
       "  df_earthquake_origin_geolocation_pivot = df_earthquake.pivot_table(\n"
      ]
     },
@@ -1533,7 +1517,7 @@
        "Volacno and landslide        8.30    121.70"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1551,14 +1535,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\AleEng\\AppData\\Local\\Temp\\ipykernel_20028\\2065613944.py:1: FutureWarning: pivot_table dropped a column because it failed to aggregate. This behavior is deprecated and will raise in a future version of pandas. Select only the columns that can be aggregated.\n",
+      "C:\\Users\\AleEng\\AppData\\Local\\Temp\\ipykernel_8732\\2065613944.py:1: FutureWarning: pivot_table dropped a column because it failed to aggregate. This behavior is deprecated and will raise in a future version of pandas. Select only the columns that can be aggregated.\n",
       "  df_earthquake_year_geolocation_pivot = df_earthquake.pivot_table(\n"
      ]
     },
@@ -1707,7 +1691,7 @@
        "[122 rows x 4 columns]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1732,11 +1716,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('../../Data/03Limpio/earthquakelimpio.csv', index=False, sep=';', encoding='utf-8')"
+    "df.to_csv('../../Data/03Limpio/EarthquakeCSV/earthquakelimpio.csv')"
    ]
   }
  ],
