Revisar respecto a función limpiar coordenadas de flood impacto

--- a/Notebooks/01LimpiarDatos/01_Ale_EarthquakeLimpiarCoordenadas.ipynb
+++ b/Notebooks/01LimpiarDatos/01_Ale_EarthquakeLimpiarCoordenadas.ipynb
@@ -878,8 +878,8 @@
     "df_eqcleaned['Latitude'] = df_eqcleaned['Latitude'].astype(float).round(2)\n",
     "df_eqcleaned['Longitude'] = df_eqcleaned['Longitude'].astype(float).round(2)\n",
     "\n",
-    "# Exportar el DataFrame limpio a archivo\n",
-    "df_eqcleaned.to_csv('earthquakefilteredcleanedgeoloc.csv', index=False)\n"
+    "# # Exportar el DataFrame limpio a archivo\n",
+    "# df_eqcleaned.to_csv('earthquakefilteredcleanedgeoloc.csv', index=False)\n"
    ]
   },
   {
@@ -1421,6 +1421,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Limpiar y rellenar resto de filas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Pivot Tables"
    ]
   },
@@ -1720,7 +1734,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('../../Data/03Limpio/EarthquakeCSV/earthquakelimpio.csv')"
+    "df.to_csv('../../Data/03Limpio/EarthquakeLimpioCSV/earthquakelimpio.csv')"
    ]
   }
  ],
