Cambio earthquake a flood

--- a/Notebooks/01LimpiarDatos/01_Ale_EDAFloods.ipynb
+++ b/Notebooks/01LimpiarDatos/01_Ale_EDAFloods.ipynb
@@ -1648,7 +1648,7 @@
     "# Categorías geográficas de Flood\n",
     "df_flood_geographical = df_flood_cleaned[['Location', 'ISO', 'Country', 'Region', 'Continent']]\n",
     "\n",
-    "# Categorías de magnitud de Earthquake\n",
+    "# Categorías de magnitud de Flood\n",
     "df_flood_magnitude = df_flood_cleaned[['Dis Mag Scale', 'Dis Mag Value']]\n",
     "\n",
     "# Categorías de geolocalización de Flood\n",
@@ -1663,7 +1663,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Análisis geográfico de terremotos"
+    "## Análisis geográfico de inundaciones"
    ]
   },
   {
@@ -2251,9 +2251,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "y=earthquake_geographical_data['Location']: Especifica la variable que se trazará en el eje y. En este caso, queremos mostrar las ubicaciones de los terremotos.\n",
+    "y=flood_geographical_data['Location']: Especifica la variable que se trazará en el eje y. En este caso, queremos mostrar las ubicaciones de los inundaciones.\n",
     "\n",
-    "order=earthquake_geographical_data['Location'].value_counts().head(20).index: este parámetro especifica el orden en el que deben aparecer las categorías en el eje y. Usamos el método value_counts() para obtener el recuento de ocurrencias para cada ubicación, luego usamos head(20) para seleccionar las 20 ubicaciones principales y, finalmente, .index se usa para extraer el índice (ubicaciones) de la serie resultante. Esto asegura que las ubicaciones con el conteo más alto se mostrarán en la parte superior de la gráfica."
+    "order=flood_geographical_data['Location'].value_counts().head(20).index: este parámetro especifica el orden en el que deben aparecer las categorías en el eje y. Usamos el método value_counts() para obtener el recuento de ocurrencias para cada ubicación, luego usamos head(20) para seleccionar las 20 ubicaciones principales y, finalmente, .index se usa para extraer el índice (ubicaciones) de la serie resultante. Esto asegura que las ubicaciones con el conteo más alto se mostrarán en la parte superior de la gráfica."
    ]
   },
   {
@@ -2311,7 +2311,7 @@
    "metadata": {},
    "source": [
     "Insights sobre repetición de inundaciones en localidades:\n",
-    "1. La localidad donde más terremotos se han repetido es South, en 16 ocasiones.\n",
+    "1. La localidad donde más inundaciones se han repetido es South, en 16 ocasiones.\n",
     "2. Le sigue North con 15.\n",
     "3. Utar Pradesh es la tercera con 7."
    ]
@@ -2417,7 +2417,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "De los 21 tipos de  desastres asociados que conllevan los terremotos, el conteo más alto de los 5808 casos corresponde a:\n",
+    "De los 21 tipos de  desastres asociados que conllevan los inundaciones, el conteo más alto de los 5808 casos corresponde a:\n",
     "1005 deslizamientos y 139 presas rotas y reventamiento de bancos acuáticos, seguidos por 84 eventos de lluvias torrenciales y 65 tormentas. De lejos le siguen las inundaciones relámpago con 37 casos."
    ]
   },
