--- a/Notebooks/01LimpiarDatos/01_Ele_Limpiar _coordenadas_anómalas.ipynb
+++ b/Notebooks/01LimpiarDatos/01_Ele_Limpiar _coordenadas_anómalas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,16 +26,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../../02_DesNat_0711_Lc_Cc.csv', delimiter=';', encoding='latin-1')"
+    "df = pd.read_csv('../../Data/03Limpio/03desastreslimpio.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -98,14 +98,14 @@
        "      <td>...</td>\n",
        "      <td>-91</td>\n",
        "      <td>1902</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>18.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>18</td>\n",
        "      <td>1902</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>2000.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>843726.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>18</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>843726</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -122,14 +122,14 @@
        "      <td>...</td>\n",
        "      <td>76.16</td>\n",
        "      <td>1905</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
        "      <td>1905</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>20000.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>812477.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>20000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>812477</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -146,14 +146,14 @@
        "      <td>...</td>\n",
        "      <td>71.4</td>\n",
        "      <td>1906</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>16.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>16</td>\n",
        "      <td>1906</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>20000.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3249907.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>16</td>\n",
+       "      <td>20000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3249907</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -170,14 +170,14 @@
        "      <td>...</td>\n",
        "      <td>-78.46</td>\n",
        "      <td>1906</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>31.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>31</td>\n",
        "      <td>1906</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>400.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>31</td>\n",
+       "      <td>400</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
@@ -194,14 +194,14 @@
        "      <td>...</td>\n",
        "      <td>69.9</td>\n",
        "      <td>1907</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>21.0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>21</td>\n",
        "      <td>1907</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>12000.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>10</td>\n",
+       "      <td>21</td>\n",
+       "      <td>12000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -224,23 +224,23 @@
        "15      China  CHN     Eastern Asia      Asia  ...      69.9       1907   \n",
        "\n",
        "   Start Month  Start Day End Year End Month End Day  Total Deaths  \\\n",
-       "2          4.0       18.0     1902       4.0    18.0        2000.0   \n",
-       "9          4.0        4.0     1905       4.0     4.0       20000.0   \n",
-       "10         8.0       16.0     1906       8.0    16.0       20000.0   \n",
-       "11         1.0       31.0     1906       1.0    31.0         400.0   \n",
-       "15        10.0       21.0     1907      10.0    21.0       12000.0   \n",
+       "2            4         18     1902         4      18          2000   \n",
+       "9            4          4     1905         4       4         20000   \n",
+       "10           8         16     1906         8      16         20000   \n",
+       "11           1         31     1906         1      31           400   \n",
+       "15          10         21     1907        10      21         12000   \n",
        "\n",
        "    Total Affected  Total Damages Adj  \n",
-       "2              NaN           843726.0  \n",
-       "9              NaN           812477.0  \n",
-       "10             NaN          3249907.0  \n",
-       "11             NaN                NaN  \n",
-       "15             NaN                NaN  \n",
+       "2                0             843726  \n",
+       "9                0             812477  \n",
+       "10               0            3249907  \n",
+       "11               0                  0  \n",
+       "15               0                  0  \n",
        "\n",
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -265,35 +265,35 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 1597 entries, 2 to 16617\n",
       "Data columns (total 26 columns):\n",
-      " #   Column             Non-Null Count  Dtype  \n",
-      "---  ------             --------------  -----  \n",
-      " 0   Dis No             1597 non-null   object \n",
-      " 1   Year               1597 non-null   int64  \n",
-      " 2   Seq                1597 non-null   int64  \n",
-      " 3   Disaster Subgroup  1597 non-null   object \n",
-      " 4   Disaster Type      1597 non-null   object \n",
-      " 5   Disaster Subtype   1597 non-null   object \n",
-      " 6   Country            1597 non-null   object \n",
-      " 7   ISO                1597 non-null   object \n",
-      " 8   Region             1597 non-null   object \n",
-      " 9   Continent          1597 non-null   object \n",
-      " 10  Location           1557 non-null   object \n",
-      " 11  Origin             21 non-null     object \n",
-      " 12  Associated Dis     342 non-null    object \n",
-      " 13  Dis Mag Value      1508 non-null   float64\n",
-      " 14  Dis Mag Scale      1597 non-null   object \n",
-      " 15  Latitude           1547 non-null   object \n",
-      " 16  Longitude          1547 non-null   object \n",
-      " 17  Start Year         1597 non-null   int64  \n",
-      " 18  Start Month        1595 non-null   float64\n",
-      " 19  Start Day          1594 non-null   float64\n",
-      " 20  End Year           1597 non-null   int64  \n",
-      " 21  End Month          1595 non-null   float64\n",
-      " 22  End Day            1594 non-null   float64\n",
-      " 23  Total Deaths       1198 non-null   float64\n",
-      " 24  Total Affected     1320 non-null   float64\n",
-      " 25  Total Damages Adj  617 non-null    float64\n",
-      "dtypes: float64(8), int64(4), object(14)\n",
+      " #   Column             Non-Null Count  Dtype \n",
+      "---  ------             --------------  ----- \n",
+      " 0   Dis No             1597 non-null   object\n",
+      " 1   Year               1597 non-null   int64 \n",
+      " 2   Seq                1597 non-null   int64 \n",
+      " 3   Disaster Subgroup  1597 non-null   object\n",
+      " 4   Disaster Type      1597 non-null   object\n",
+      " 5   Disaster Subtype   1597 non-null   object\n",
+      " 6   Country            1597 non-null   object\n",
+      " 7   ISO                1597 non-null   object\n",
+      " 8   Region             1597 non-null   object\n",
+      " 9   Continent          1597 non-null   object\n",
+      " 10  Location           1557 non-null   object\n",
+      " 11  Origin             21 non-null     object\n",
+      " 12  Associated Dis     342 non-null    object\n",
+      " 13  Dis Mag Value      1597 non-null   int64 \n",
+      " 14  Dis Mag Scale      1597 non-null   object\n",
+      " 15  Latitude           1547 non-null   object\n",
+      " 16  Longitude          1547 non-null   object\n",
+      " 17  Start Year         1597 non-null   int64 \n",
+      " 18  Start Month        1597 non-null   int64 \n",
+      " 19  Start Day          1597 non-null   int64 \n",
+      " 20  End Year           1597 non-null   int64 \n",
+      " 21  End Month          1597 non-null   int64 \n",
+      " 22  End Day            1597 non-null   int64 \n",
+      " 23  Total Deaths       1597 non-null   int64 \n",
+      " 24  Total Affected     1597 non-null   int64 \n",
+      " 25  Total Damages Adj  1597 non-null   int64 \n",
+      "dtypes: int64(12), object(14)\n",
       "memory usage: 336.9+ KB\n"
      ]
     }
@@ -304,20 +304,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\blanc\\AppData\\Local\\Temp\\ipykernel_2216\\1236789326.py:11: SettingWithCopyWarning: \n",
+      "C:\\Users\\blanc\\AppData\\Local\\Temp\\ipykernel_10512\\1236789326.py:11: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_earthquake['Latitude'] = df_earthquake['Latitude'].apply(limpiar_valor)\n",
-      "C:\\Users\\blanc\\AppData\\Local\\Temp\\ipykernel_2216\\1236789326.py:12: SettingWithCopyWarning: \n",
+      "C:\\Users\\blanc\\AppData\\Local\\Temp\\ipykernel_10512\\1236789326.py:12: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +461,7 @@
        "[100 rows x 3 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,20 +472,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Latitude     14\n",
-       "Longitude    14\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "GeocoderServiceError",
+     "evalue": "Non-successful status code 502",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAdapterHTTPError\u001b[0m                          Traceback (most recent call last)",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python310\\site-packages\\geopy\\geocoders\\base.py:368\u001b[0m, in \u001b[0;36mGeocoder._call_geocoder\u001b[1;34m(self, url, callback, timeout, is_json, headers)\u001b[0m\n\u001b[0;32m    367\u001b[0m \u001b[39mif\u001b[39;00m is_json:\n\u001b[1;32m--> 368\u001b[0m     result \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49madapter\u001b[39m.\u001b[39;49mget_json(url, timeout\u001b[39m=\u001b[39;49mtimeout, headers\u001b[39m=\u001b[39;49mreq_headers)\n\u001b[0;32m    369\u001b[0m \u001b[39melse\u001b[39;00m:\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python310\\site-packages\\geopy\\adapters.py:447\u001b[0m, in \u001b[0;36mRequestsAdapter.get_json\u001b[1;34m(self, url, timeout, headers)\u001b[0m\n\u001b[0;32m    446\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget_json\u001b[39m(\u001b[39mself\u001b[39m, url, \u001b[39m*\u001b[39m, timeout, headers):\n\u001b[1;32m--> 447\u001b[0m     resp \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_request(url, timeout\u001b[39m=\u001b[39;49mtimeout, headers\u001b[39m=\u001b[39;49mheaders)\n\u001b[0;32m    448\u001b[0m     \u001b[39mtry\u001b[39;00m:\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python310\\site-packages\\geopy\\adapters.py:475\u001b[0m, in \u001b[0;36mRequestsAdapter._request\u001b[1;34m(self, url, timeout, headers)\u001b[0m\n\u001b[0;32m    474\u001b[0m     \u001b[39mif\u001b[39;00m resp\u001b[39m.\u001b[39mstatus_code \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m \u001b[39m400\u001b[39m:\n\u001b[1;32m--> 475\u001b[0m         \u001b[39mraise\u001b[39;00m AdapterHTTPError(\n\u001b[0;32m    476\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mNon-successful status code \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m\"\u001b[39m \u001b[39m%\u001b[39m resp\u001b[39m.\u001b[39mstatus_code,\n\u001b[0;32m    477\u001b[0m             status_code\u001b[39m=\u001b[39mresp\u001b[39m.\u001b[39mstatus_code,\n\u001b[0;32m    478\u001b[0m             headers\u001b[39m=\u001b[39mresp\u001b[39m.\u001b[39mheaders,\n\u001b[0;32m    479\u001b[0m             text\u001b[39m=\u001b[39mresp\u001b[39m.\u001b[39mtext,\n\u001b[0;32m    480\u001b[0m         )\n\u001b[0;32m    482\u001b[0m \u001b[39mreturn\u001b[39;00m resp\n",
+      "\u001b[1;31mAdapterHTTPError\u001b[0m: Non-successful status code 502",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[1;31mGeocoderServiceError\u001b[0m                      Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m     location \u001b[39m=\u001b[39m geolocator\u001b[39m.\u001b[39mgeocode(row[\u001b[39m'\u001b[39m\u001b[39mCountry\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[0;32m      4\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m----> 5\u001b[0m     location \u001b[39m=\u001b[39m geolocator\u001b[39m.\u001b[39;49mgeocode(row[\u001b[39m'\u001b[39;49m\u001b[39mLocation\u001b[39;49m\u001b[39m'\u001b[39;49m])\n\u001b[0;32m      6\u001b[0m \u001b[39mif\u001b[39;00m location:\n\u001b[0;32m      7\u001b[0m     df_earthquake\u001b[39m.\u001b[39mloc[i, \u001b[39m'\u001b[39m\u001b[39mLatitude\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m location\u001b[39m.\u001b[39mlatitude\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python310\\site-packages\\geopy\\geocoders\\nominatim.py:297\u001b[0m, in \u001b[0;36mNominatim.geocode\u001b[1;34m(self, query, exactly_one, timeout, limit, addressdetails, language, geometry, extratags, country_codes, viewbox, bounded, featuretype, namedetails)\u001b[0m\n\u001b[0;32m    295\u001b[0m logger\u001b[39m.\u001b[39mdebug(\u001b[39m\"\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m.geocode: \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m\"\u001b[39m, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__class__\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m, url)\n\u001b[0;32m    296\u001b[0m callback \u001b[39m=\u001b[39m partial(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_parse_json, exactly_one\u001b[39m=\u001b[39mexactly_one)\n\u001b[1;32m--> 297\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_call_geocoder(url, callback, timeout\u001b[39m=\u001b[39;49mtimeout)\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python310\\site-packages\\geopy\\geocoders\\base.py:388\u001b[0m, in \u001b[0;36mGeocoder._call_geocoder\u001b[1;34m(self, url, callback, timeout, is_json, headers)\u001b[0m\n\u001b[0;32m    386\u001b[0m         \u001b[39mreturn\u001b[39;00m callback(result)\n\u001b[0;32m    387\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m error:\n\u001b[1;32m--> 388\u001b[0m     res \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_adapter_error_handler(error)\n\u001b[0;32m    389\u001b[0m     \u001b[39mif\u001b[39;00m res \u001b[39mis\u001b[39;00m NONE_RESULT:\n\u001b[0;32m    390\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mNone\u001b[39;00m\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python310\\site-packages\\geopy\\geocoders\\base.py:411\u001b[0m, in \u001b[0;36mGeocoder._adapter_error_handler\u001b[1;34m(self, error)\u001b[0m\n\u001b[0;32m    407\u001b[0m         \u001b[39mraise\u001b[39;00m exc_cls(\n\u001b[0;32m    408\u001b[0m             \u001b[39mstr\u001b[39m(error), retry_after\u001b[39m=\u001b[39mget_retry_after(error\u001b[39m.\u001b[39mheaders)\n\u001b[0;32m    409\u001b[0m         ) \u001b[39mfrom\u001b[39;00m \u001b[39merror\u001b[39;00m\n\u001b[0;32m    410\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m--> 411\u001b[0m         \u001b[39mraise\u001b[39;00m exc_cls(\u001b[39mstr\u001b[39m(error)) \u001b[39mfrom\u001b[39;00m \u001b[39merror\u001b[39;00m\n\u001b[0;32m    412\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    413\u001b[0m     res \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_geocoder_exception_handler(error)\n",
+      "\u001b[1;31mGeocoderServiceError\u001b[0m: Non-successful status code 502"
+     ]
     }
    ],
    "source": [
