--- a/Notebooks/99 PRUEBAS a los CSV/03.05 Prueba 04DesNat_DEFS_limpio_fc.ipynb
+++ b/Notebooks/99 PRUEBAS a los CSV/03.05 Prueba 04DesNat_DEFS_limpio_fc.ipynb
@@ -137,51 +137,51 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1902-0003-GTM</td>\n",
-       "      <td>1902</td>\n",
+       "      <td>1904-0003-BGD</td>\n",
+       "      <td>1904</td>\n",
        "      <td>3</td>\n",
-       "      <td>Geophysical</td>\n",
-       "      <td>Volcanic activity</td>\n",
-       "      <td>Ash fall</td>\n",
-       "      <td>Guatemala</td>\n",
-       "      <td>GTM</td>\n",
-       "      <td>Central America</td>\n",
-       "      <td>Americas</td>\n",
+       "      <td>Meteorological</td>\n",
+       "      <td>Storm</td>\n",
+       "      <td>Tropical cyclone</td>\n",
+       "      <td>Bangladesh</td>\n",
+       "      <td>BGD</td>\n",
+       "      <td>Southern Asia</td>\n",
+       "      <td>Asia</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1902</td>\n",
-       "      <td>4</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1902</td>\n",
-       "      <td>4</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1000</td>\n",
+       "      <td>1904</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1904</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1902-0010-GTM</td>\n",
-       "      <td>1902</td>\n",
-       "      <td>10</td>\n",
+       "      <td>1905-0003-IND</td>\n",
+       "      <td>1905</td>\n",
+       "      <td>3</td>\n",
        "      <td>Geophysical</td>\n",
-       "      <td>Volcanic activity</td>\n",
-       "      <td>Ash fall</td>\n",
-       "      <td>Guatemala</td>\n",
-       "      <td>GTM</td>\n",
-       "      <td>Central America</td>\n",
-       "      <td>Americas</td>\n",
+       "      <td>Earthquake</td>\n",
+       "      <td>Ground movement</td>\n",
+       "      <td>India</td>\n",
+       "      <td>IND</td>\n",
+       "      <td>Southern Asia</td>\n",
+       "      <td>Asia</td>\n",
        "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1902</td>\n",
-       "      <td>10</td>\n",
-       "      <td>24</td>\n",
-       "      <td>1902</td>\n",
-       "      <td>10</td>\n",
-       "      <td>24</td>\n",
-       "      <td>6000</td>\n",
+       "      <td>76.16</td>\n",
+       "      <td>1905</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1905</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>20000</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>812477</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -189,33 +189,33 @@
        "</div>"
       ],
       "text/plain": [
-       "          Dis No  Year   Seq Disaster Subgroup      Disaster Type  \\\n",
-       "0  1900-9002-CPV  1900  9002    Climatological            Drought   \n",
-       "1  1900-9001-IND  1900  9001    Climatological            Drought   \n",
-       "2  1902-0012-GTM  1902    12       Geophysical         Earthquake   \n",
-       "3  1902-0003-GTM  1902     3       Geophysical  Volcanic activity   \n",
-       "4  1902-0010-GTM  1902    10       Geophysical  Volcanic activity   \n",
+       "          Dis No  Year   Seq Disaster Subgroup Disaster Type  \\\n",
+       "0  1900-9002-CPV  1900  9002    Climatological       Drought   \n",
+       "1  1900-9001-IND  1900  9001    Climatological       Drought   \n",
+       "2  1902-0012-GTM  1902    12       Geophysical    Earthquake   \n",
+       "3  1904-0003-BGD  1904     3    Meteorological         Storm   \n",
+       "4  1905-0003-IND  1905     3       Geophysical    Earthquake   \n",
        "\n",
-       "  Disaster Subtype     Country  ISO           Region Continent  ... Longitude  \\\n",
-       "0          Drought  Cabo Verde  CPV   Western Africa    Africa  ...       NaN   \n",
-       "1          Drought       India  IND    Southern Asia      Asia  ...       NaN   \n",
-       "2  Ground movement   Guatemala  GTM  Central America  Americas  ...       -91   \n",
-       "3         Ash fall   Guatemala  GTM  Central America  Americas  ...       NaN   \n",
-       "4         Ash fall   Guatemala  GTM  Central America  Americas  ...       NaN   \n",
+       "   Disaster Subtype     Country  ISO           Region Continent  ...  \\\n",
+       "0           Drought  Cabo Verde  CPV   Western Africa    Africa  ...   \n",
+       "1           Drought       India  IND    Southern Asia      Asia  ...   \n",
+       "2   Ground movement   Guatemala  GTM  Central America  Americas  ...   \n",
+       "3  Tropical cyclone  Bangladesh  BGD    Southern Asia      Asia  ...   \n",
+       "4   Ground movement       India  IND    Southern Asia      Asia  ...   \n",
        "\n",
-       "  Start Year Start Month  Start Day End Year End Month End Day  Total Deaths  \\\n",
-       "0       1900           0          0     1900         0       0         11000   \n",
-       "1       1900           0          0     1900         0       0       1250000   \n",
-       "2       1902           4         18     1902         4      18          2000   \n",
-       "3       1902           4          8     1902         4       8          1000   \n",
-       "4       1902          10         24     1902        10      24          6000   \n",
+       "  Longitude Start Year Start Month  Start Day End Year End Month End Day  \\\n",
+       "0       NaN       1900           0          0     1900         0       0   \n",
+       "1       NaN       1900           0          0     1900         0       0   \n",
+       "2       -91       1902           4         18     1902         4      18   \n",
+       "3       NaN       1904          11          0     1904        11       0   \n",
+       "4     76.16       1905           4          4     1905         4       4   \n",
        "\n",
-       "   Total Affected  Total Damages Adj  \n",
-       "0               0                  0  \n",
-       "1               0                  0  \n",
-       "2               0             843726  \n",
-       "3               0                  0  \n",
-       "4               0                  0  \n",
+       "   Total Deaths  Total Affected  Total Damages Adj  \n",
+       "0         11000               0                  0  \n",
+       "1       1250000               0                  0  \n",
+       "2          2000               0             843726  \n",
+       "3             0               0                  0  \n",
+       "4         20000               0             812477  \n",
        "\n",
        "[5 rows x 26 columns]"
       ]
@@ -226,7 +226,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('../../Data/03Limpio/03desastreslimpiorespaldo.csv')\n",
+    "df = pd.read_csv('../99 PRUEBAS a los CSV/01 Prueba quitando eventos/04DesNat_DEFS_limpio_fc.csv')\n",
     "df.head()"
    ]
   },
@@ -238,7 +238,7 @@
     {
      "data": {
       "text/plain": [
-       "(16636, 26)"
+       "(12826, 26)"
       ]
      },
      "execution_count": 3,
@@ -260,38 +260,38 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 16636 entries, 0 to 16635\n",
+      "RangeIndex: 12826 entries, 0 to 12825\n",
       "Data columns (total 26 columns):\n",
       " #   Column             Non-Null Count  Dtype \n",
       "---  ------             --------------  ----- \n",
-      " 0   Dis No             16636 non-null  object\n",
-      " 1   Year               16636 non-null  int64 \n",
-      " 2   Seq                16636 non-null  int64 \n",
-      " 3   Disaster Subgroup  16636 non-null  object\n",
-      " 4   Disaster Type      16636 non-null  object\n",
-      " 5   Disaster Subtype   13313 non-null  object\n",
-      " 6   Country            16636 non-null  object\n",
-      " 7   ISO                16636 non-null  object\n",
-      " 8   Region             16636 non-null  object\n",
-      " 9   Continent          16636 non-null  object\n",
-      " 10  Location           14825 non-null  object\n",
-      " 11  Origin             4085 non-null   object\n",
-      " 12  Associated Dis     3593 non-null   object\n",
-      " 13  Dis Mag Value      16636 non-null  int64 \n",
-      " 14  Dis Mag Scale      15416 non-null  object\n",
-      " 15  Latitude           2775 non-null   object\n",
-      " 16  Longitude          2775 non-null   object\n",
-      " 17  Start Year         16636 non-null  int64 \n",
-      " 18  Start Month        16636 non-null  int64 \n",
-      " 19  Start Day          16636 non-null  int64 \n",
-      " 20  End Year           16636 non-null  int64 \n",
-      " 21  End Month          16636 non-null  int64 \n",
-      " 22  End Day            16636 non-null  int64 \n",
-      " 23  Total Deaths       16636 non-null  int64 \n",
-      " 24  Total Affected     16636 non-null  int64 \n",
-      " 25  Total Damages Adj  16636 non-null  int64 \n",
+      " 0   Dis No             12826 non-null  object\n",
+      " 1   Year               12826 non-null  int64 \n",
+      " 2   Seq                12826 non-null  int64 \n",
+      " 3   Disaster Subgroup  12826 non-null  object\n",
+      " 4   Disaster Type      12826 non-null  object\n",
+      " 5   Disaster Subtype   9766 non-null   object\n",
+      " 6   Country            12826 non-null  object\n",
+      " 7   ISO                12826 non-null  object\n",
+      " 8   Region             12826 non-null  object\n",
+      " 9   Continent          12826 non-null  object\n",
+      " 10  Location           11583 non-null  object\n",
+      " 11  Origin             3680 non-null   object\n",
+      " 12  Associated Dis     3360 non-null   object\n",
+      " 13  Dis Mag Value      12826 non-null  int64 \n",
+      " 14  Dis Mag Scale      12826 non-null  object\n",
+      " 15  Latitude           2659 non-null   object\n",
+      " 16  Longitude          2659 non-null   object\n",
+      " 17  Start Year         12826 non-null  int64 \n",
+      " 18  Start Month        12826 non-null  int64 \n",
+      " 19  Start Day          12826 non-null  int64 \n",
+      " 20  End Year           12826 non-null  int64 \n",
+      " 21  End Month          12826 non-null  int64 \n",
+      " 22  End Day            12826 non-null  int64 \n",
+      " 23  Total Deaths       12826 non-null  int64 \n",
+      " 24  Total Affected     12826 non-null  int64 \n",
+      " 25  Total Damages Adj  12826 non-null  int64 \n",
       "dtypes: int64(12), object(14)\n",
-      "memory usage: 3.3+ MB\n"
+      "memory usage: 2.5+ MB\n"
      ]
     }
    ],
@@ -344,18 +344,18 @@
        "Seq                      0\n",
        "Disaster Subgroup        0\n",
        "Disaster Type            0\n",
-       "Disaster Subtype      3323\n",
+       "Disaster Subtype      3060\n",
        "Country                  0\n",
        "ISO                      0\n",
        "Region                   0\n",
        "Continent                0\n",
-       "Location              1811\n",
-       "Origin               12551\n",
-       "Associated Dis       13043\n",
+       "Location              1243\n",
+       "Origin                9146\n",
+       "Associated Dis        9466\n",
        "Dis Mag Value            0\n",
-       "Dis Mag Scale         1220\n",
-       "Latitude             13861\n",
-       "Longitude            13861\n",
+       "Dis Mag Scale            0\n",
+       "Latitude             10167\n",
+       "Longitude            10167\n",
        "Start Year               0\n",
        "Start Month              0\n",
        "Start Day                0\n",
